--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "multistepform-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://reguv760.github.io/multistepform-react",
   "dependencies": {
     "material-ui": "^0.20.2",
     "react": "^16.8.6",
@@ -13,7 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
